flux/apps/cluster1/lm-studio/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: lm-studio
subsets:
- addresses:
  - ip: 192.168.0.178
  ports:
  - port: 1234
    name: http
