flux/apps/cluster1/lm-studio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lm-studio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 128m
    acme.cert-manager.io/http01-ingress-class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - lm-studio.home.wugi.info
    secretName: lm-studio-ingress-certs
  rules:
  - host: lm-studio.home.wugi.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: lm-studio
            port:
              number: 80
